src/test/ui/hr-subtype/hr-subtype.bound_a_vs_bound_a.stderr
warning: lifetime parameter `'z` never used
  --> $DIR/hr-subtype.rs:32:29
   |
LL |           fn subtype<'x,'y:'x,'z:'y>() {
   |                           ----^^
   |                           |
   |                           help: elide the unused lifetime
...
LL | / check! { bound_a_vs_bound_a: (for<'a> fn(&'a u32),
LL | |                               for<'a> fn(&'a u32)) }
   | |____________________________________________________- in this macro invocation
   |
   = note: `#[warn(unused_lifetimes)]` on by default

warning: lifetime parameter `'z` never used
  --> $DIR/hr-subtype.rs:38:31
   |
LL |           fn supertype<'x,'y:'x,'z:'y>() {
   |                             ----^^
   |                             |
   |                             help: elide the unused lifetime
...
LL | / check! { bound_a_vs_bound_a: (for<'a> fn(&'a u32),
LL | |                               for<'a> fn(&'a u32)) }
   | |____________________________________________________- in this macro invocation

error: compilation successful
  --> $DIR/hr-subtype.rs:100:1
   |
LL | / fn main() {
LL | |
LL | |
LL | |
LL | |
LL | |
LL | | }
   | |_^

error: aborting due to previous error

